# carabao

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.claude-plugin/: marketplace.json
plugins/carabao/.claude-plugin/: plugin.json
plugins/carabao/skills/carabao/: SKILL.md
src/carabao/: __init__.py  cfg.py  constants.py  core.py  curses.py  form.py  settings.py  style.py  utils.py
src/carabao/cfg/: base_cfg.py  cfg.py  secret_cfg.py
src/carabao/cli/: __init__.py  cli_init.py  dev_display.py  dev_display.tcss  display.py  display_textual.py  init_prompter.py  log_stream.py  new_display.py  new_display.tcss  run.py  sample.cfg  sample.factory.py  sample.passive.py  sample.subscriber.py  sample_settings.py  start.py
src/carabao/cli/cmd_dev/: constants.py  display.py  display.tcss  ui.py  ui.tcss  utils.py  visualizer.py
src/carabao/cli/cmd_new/: display.py  display.tcss  item.py
src/carabao/cli/sample/: factory.py  form.py
src/carabao/constants/: __init__.py  _constants.py  async_mongo.py  async_redis.py  elasticsearch.py  mongo.py  postgres.py  redis.py
src/carabao/consumers/: __init__.py  log_to_db.py  network_health.py  pretty_env.py
src/carabao/errors/: environment.py
src/carabao/helpers/: efficient_redis_sf.py  kumander.py  log.py  prompter.py  stdout_catcher.py
src/carabao/lanes/: __init__.py  es_kuma.py  log_to_db.py  mongo_kuma.py  network_health.py  network_watcher.py  pretty_env.py  redis_kuma.py  resource_watcher.py  uptime_kuma.py
