[metadata]
name = carabao
description = Simple publisher-subscriber framework.
author = Michael Edmund Wong
version = 1.0.2
# license = MIT
# license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
install_requires = 
	async-timeout
	dnspython
	fun-things
	generic-consumer==0.20.*
	lazy-main
	python-dotenv
	simple-chalk
	typing-extensions
python_requires = >=3.6
package_dir = 
	=src
zip_safe = no

