[metadata]
name = carabao
description = Moooove your data with ease using our udderly simple pipeline framework.
author = Talisik Team
version = 2.3.2
# license = MIT
# license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	# Programming Language :: Python :: 3.6
	# Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Programming Language :: Python :: 3.14
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires = 
	async-timeout
	dnspython
	fun-things==1.0.*
	lazy-main==0.6.*
	python-dotenv
	typing-extensions
	typer
	lane2lane==2.3.*
python_requires = >=3.6
package_dir =
	=src
zip_safe = no

[options.extras_require]
standard =
	textual
	textual-slider
mongo =
	fun-things[mongo]==1.0.*
redis =
	fun-things[redis]==1.0.*
elasticsearch =
	fun-things[elasticsearch]==1.0.*
postgres =
	psycopg2-binary
databases =
	fun-things[mongo,redis,elasticsearch]==1.0.*
	psycopg2-binary
all =
	textual
	textual-slider
	fun-things[mongo,redis,elasticsearch]==1.0.*
	psycopg2-binary

